[CDAP-14439] Styling fixes across CDAP UI for consistency
  - Removes having excessive border for preview and configure to avoid having a gap on hover in lower resolutions
  - Fixes the border bottom of top panel to be consistent with the border of run level container
  - Fixes AuthRefresher to be positoin absolute to avoid showing scrollbars in app-container
  - Fixes the filepath and the search text to have title. Useful when text is truncated with ellisis
  - Fixes BigQuery and Spanner browsers to not have padding around the content. This is for consistency with other browsers
  - Fixes browser toppanel text to not wrap to new line with a long height. This will push the entire container's height which looks awkward on smaller browsers
  - Fixes the height of all browser contents to be consistent
  - Removes showing weird error lines in graph when there is no data for error records in a plugin
  - Fixes the schedule button to not jump up and down in lower resolution

--- a/cdap-ui/app/hydrator/toppanel.less
+++ b/cdap-ui/app/hydrator/toppanel.less
@@ -66,9 +66,7 @@ body.theme-cdap {
 
       div.btn {
         .cask-btn(@border: 0, @border-radius: 0, @color: #666, @padding: 3px 0);
-        border-top: 1px solid transparent;
         border-right: 1px solid transparent;
-        border-bottom: 1px solid transparent;
         transition: all 0.2s ease;
         width: 60px;
         margin-left: 0;
@@ -117,8 +115,6 @@ body.theme-cdap {
         &:focus,
         &.btn-select {
           background-color: #ebebeb;
-          border-top: 1px solid #ebebeb;
-          border-bottom: 1px solid #ebebeb;
         }
         &:active {
           background-color: #828da0;
